<resources>
    <string name="app_name">stepCounter</string>
    <string name="action_settings">Settings</string>
    <string name="profil">Profil</string>
    <string name="home">Home</string>
    <string name="historik">Historik</string>
    <string name="homeBtn">Home</string>
    <string name="StepHistory">Step History</string>
    <string name="Uppdate">Uppdate</string>
    <string name="Start">Start</string>
    <string name="AmountofSteps">Loading Steps</string>
    <string name="delete">Delete all data</string>
    <string name="changeProfile">Profile Settings</string>
    <string name="Stop">Stop count</string>
    <string name="nameEdit">Name</string>
    <string name="stepGoalEdit">Only even hundres</string>
    <string name="bestday">Best Day</string>
    <string name="startPage">Daily step recommendation is 10,000 steps</string>
    <string name="name" />
    <string name="star">star</string>
</resources>
